
v4.0.0 2025-01-??
     * Plugins needs updating (include paths, and add usage of
       registerPluginTestFunction). NCRYSTAL_PLUGIN_RUNTESTS=1 and
       NCRYSTAL_PLUGIN_RUNTESTS (fixme). NB: NCRYSTAL_PLUGIN_LIST now accepts
       .SODYLIB as cross-platform alias for .so/.dylib/.dll
     * Removed several long-obsolete CMake options. Also removed any options
       related to python code, since those are now installed without cmake.
     * Removed SOVERSION from produced libraries (due to github issue #186).
     * FactImpl::registerFactory function will now always raise an error
       in case of name clashes with an existing registed factory.
     * fixme: PluginBoilerplate header moved, have cmake generate
       redirection header for now?
     * TODO: Header locations changed, except for ncapi.h, ncrystal.h and
       NCrystal.hh. New headers are in subdirs indication their location in
       internal NCrystal coding units ("core", "utils", ...)
     * FIXME: Warn that anyone doing manual builds of NCrystal should read
       INSTALL again, as it has been completely rewritten to reflect the new infrastructure.
     * TODO: Support C++20 compilation
     * TODO: Rename _mmc.py to mmc.py! And add docstrings.
     * TODO: Rename PCBragg to PowderBragg!
     * Redesign the SmallVector class to be never implicitly copyable and
       instead introduce SmallVector_IC which is. This is needed for MS
       VisualStudio support. Also make resize methods unavailable for
       non-noexcept copy types.
     * Redesign the Optional class to support VisualStudio compilation.
     * Explictly add a few methods in NCTypes.hh which should otherwise be
       implicitly available through the base class. This is needed for MS
       VisualStudio support.
     * Replace std::vector with SmallVector in HKLList to work around
       VisualStudio issues.
     * Various minor fixes of code to appease VisualStudio.
     * Disable MMC verbose output messages also in Debug builds.