@@ -22,7 +22,7 @@ options:
 ============= CLI >>--split MyMat 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5'<< ====================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5',
@@ -59,7 +59,7 @@ AT (0,0,0) ABSOLUTE
 ============= CLI >>--split MyMat 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=10.0'<< ====================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=10.0',
@@ -91,7 +91,7 @@ AT (0,0,0) ABSOLUTE
 ============= CLI >>--split MyMat 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5;comp=bragg'<< ====================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5;comp=bragg',
@@ -118,7 +118,7 @@ AT (0,0,0) ABSOLUTE
 ============= CLI >>--split MyMat 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5;inelas=0'<< ====================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5;inelas=0',
@@ -150,7 +150,7 @@ AT (0,0,0) ABSOLUTE
 ============= CLI >>MyMat 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5'<< ====================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5',
@@ -176,7 +176,7 @@ AT (0,0,0) ABSOLUTE
 ============= CLI >>MyMat 'phases<0.65*Al_sg225.ncmat;dcutoff=0.4&0.35*MgO_sg225_Periclase.ncmat;dcutoff=0.8>;temp=100K;vdoslux=0' --split<< ====================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'phases<0.65*Al_sg225.ncmat;dcutoff=0.4&0.35*MgO_sg225_Periclase.ncmat;dcutoff=0.8>;temp=100K;vdoslux=0',
@@ -216,7 +216,7 @@ Wrote: myblafile.c
 Contents of myblafile.c: ========================================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5',
@@ -241,7 +241,7 @@ AT (0,0,0) ABSOLUTE
 TEST PyAPI1 ============================================================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5;inelas=0',
@@ -272,7 +272,7 @@ AT (0,0,0) ABSOLUTE
 TEST PyAPI2 ============================================================
 
 /*
-   The following code was auto generated by NCrystal v3.9.80 via Python:
+   The following code was auto generated by NCrystal v<current> via Python:
 
      NCrystal.mcstasutils.cfgstr_2_union_instrument_code(
          cfgstr = 'Al_sg225.ncmat;temp=20K;vdoslux=0;dcutoff=0.5;inelas=0',
